uwsgi change port

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,9 +1,9 @@
 
 [uwsgi]
-http = :8000
+http = :8080
 project=FlowerIdentify
-base =/home/kali/ML/FlowerIdentify/
-chdir = /home/kali/ML/FlowerIdentify/
+base =/root/FlowerIdentify/
+chdir = /root/FlowerIdentify/
 
 module=%(project).wsgi:application
 
