--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,16 +1,16 @@
-
 [uwsgi]
-http = :8080
 project=FlowerIdentify
-base =/root/FlowerIdentify/
-chdir = /root/FlowerIdentify/
+base = /root
+
+chdir=/root/FlowerIdentify
 
 module=%(project).wsgi:application
 
 master=true
 processes=4
 
-; 用于和Nginx通信，这里没有部署Nginx，注释了
-;socket = 0.0.0.0:8000
-;http-socket = :8000
-;socket=/root/jaundice-web1/%(project).sock
+socket = 0.0.0.0:8080
+# http-socket = :8000
+# socket=/root/jaundice-web1/%(project).sock
+
+daemonize=/root/FlowerIdentify/%(project).log
